src/rr/grammarParser.java
// Generated from grammar.g4 by ANTLR 4.0

package rr;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNSimulator;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class grammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__13=1, T__12=2, T__11=3, T__10=4, T__9=5, T__8=6, T__7=7, T__6=8, T__5=9, 
		T__4=10, T__3=11, T__2=12, T__1=13, T__0=14, COMMENT=15, INT=16, DOUBLE=17, 
		ID=18, WS=19;
	public static final String[] tokenNames = {
		"<INVALID>", "')'", "','", "'+'", "'*'", "'-'", "'('", "'int'", "'='", 
		"';'", "'ret'", "'double'", "'write('", "'/'", "'read('", "COMMENT", "INT", 
		"DOUBLE", "ID", "WS"
	};
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_readFunction = 2, RULE_writeFunction = 3, 
		RULE_invocation = 4, RULE_expression = 5, RULE_artmExp = 6, RULE_mulExp = 7, 
		RULE_expOp = 8, RULE_var_dec = 9, RULE_type = 10, RULE_mull_operator = 11, 
		RULE_add_operator = 12;
	public static final String[] ruleNames = {
		"program", "statement", "ReadFunction", "WriteFunction", "invocation",
		"expression", "artmExp", "mulExp", "expOp", "var_dec", "type", "mull_operator", 
		"add_operator"
	};

	@Override
	public String getGrammarFileName() { return "grammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public grammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Compiler.Program ret;
		public StatementContext s;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ProgramContext)_localctx).ret =  new Compiler.Program(); 
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 7) | (1L << 10) | (1L << 11) | (1L << 12) | (1L << 14) | (1L << ID))) != 0)) {
				{
				{
				setState(27); ((ProgramContext)_localctx).s = statement();
				 _localctx.ret.add(((ProgramContext)_localctx).s.ret); 
				setState(29); match(9);
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Compiler.Statement ret;
		public Var_decContext c;
		public Token a;
		public ExpressionContext e;
		public ReadFunctionContext r;
		public WriteFunctionContext p;
		public InvocationContext invocation;
		public WriteFunctionContext writeFunction() {
			return getRuleContext(WriteFunctionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Var_decContext var_dec() {
			return getRuleContext(Var_decContext.class,0);
		}
		public InvocationContext invocation() {
			return getRuleContext(InvocationContext.class,0);
		}
		public TerminalNode ID() { return getToken(grammarParser.ID, 0); }
		public ReadFunctionContext readFunction() {
			return getRuleContext(ReadFunctionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(57);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(36); ((StatementContext)_localctx).c = var_dec();
				 ((StatementContext)_localctx).ret =  ((StatementContext)_localctx).c.val; 
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(39); ((StatementContext)_localctx).a = match(ID);
				setState(40); match(8);
				setState(41); ((StatementContext)_localctx).e = expression();
				 ((StatementContext)_localctx).ret =  new Compiler.Assignment((((StatementContext)_localctx).a!=null?((StatementContext)_localctx).a.getText():null), ((StatementContext)_localctx).e.ret); 
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(44); match(10);
				setState(45); ((StatementContext)_localctx).e = expression();
				 ((StatementContext)_localctx).ret =  new Compiler.Return(((StatementContext)_localctx).e.ret); 
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(48); ((StatementContext)_localctx).r = readFunction();
				 ((StatementContext)_localctx).ret =  ((StatementContext)_localctx).r.ret; 
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(51); ((StatementContext)_localctx).p = writeFunction();
				 ((StatementContext)_localctx).ret =  ((StatementContext)_localctx).p.ret; 
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(54); ((StatementContext)_localctx).invocation = invocation();
				 ((StatementContext)_localctx).ret =  ((StatementContext)_localctx).invocation.ret; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadFunctionContext extends ParserRuleContext {
		public Compiler.ReadFunction ret;
		public Token n;
		public TerminalNode ID() { return getToken(grammarParser.ID, 0); }
		public ReadFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterReadFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitReadFunction(this);
		}
	}

	public final ReadFunctionContext readFunction() throws RecognitionException {
		ReadFunctionContext _localctx = new ReadFunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_readFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59); match(14);
			setState(60); ((ReadFunctionContext)_localctx).n = match(ID);
			 ((ReadFunctionContext)_localctx).ret =  new Compiler.ReadFunction((((ReadFunctionContext)_localctx).n!=null?((ReadFunctionContext)_localctx).n.getText():null));
			setState(62); match(1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WriteFunctionContext extends ParserRuleContext {
		public Compiler.WriteFunction ret;
		public Token n;
		public TerminalNode DOUBLE() { return getToken(grammarParser.DOUBLE, 0); }
		public TerminalNode INT() { return getToken(grammarParser.INT, 0); }
		public TerminalNode ID() { return getToken(grammarParser.ID, 0); }
		public WriteFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_writeFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterWriteFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitWriteFunction(this);
		}
	}

	public final WriteFunctionContext writeFunction() throws RecognitionException {
		WriteFunctionContext _localctx = new WriteFunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_writeFunction);
		try {
			setState(76);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(64); match(12);
				setState(65); ((WriteFunctionContext)_localctx).n = match(ID);
				 ((WriteFunctionContext)_localctx).ret =  new Compiler.WriteFunction((((WriteFunctionContext)_localctx).n!=null?((WriteFunctionContext)_localctx).n.getText():null));
				setState(67); match(1);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68); match(12);
				setState(69); ((WriteFunctionContext)_localctx).n = match(INT);
				 ((WriteFunctionContext)_localctx).ret =  new Compiler.WriteFunction((((WriteFunctionContext)_localctx).n!=null?((WriteFunctionContext)_localctx).n.getText():null));
				setState(71); match(1);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72); match(12);
				setState(73); ((WriteFunctionContext)_localctx).n = match(DOUBLE);
				 ((WriteFunctionContext)_localctx).ret =  new Compiler.WriteFunction((((WriteFunctionContext)_localctx).n!=null?((WriteFunctionContext)_localctx).n.getText():null));
				setState(75); match(1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InvocationContext extends ParserRuleContext {
		public Compiler.Invocation ret;
		public Token ID;
		public ExpressionContext a;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode ID() { return getToken(grammarParser.ID, 0); }
		public InvocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_invocation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterInvocation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitInvocation(this);
		}
	}

	public final InvocationContext invocation() throws RecognitionException {
		InvocationContext _localctx = new InvocationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_invocation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); ((InvocationContext)_localctx).ID = match(ID);
			 ((InvocationContext)_localctx).ret =  new Compiler.Invocation((((InvocationContext)_localctx).ID!=null?((InvocationContext)_localctx).ID.getText():null)); 
			setState(80); match(6);
			setState(92);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << DOUBLE) | (1L << ID))) != 0)) {
				{
				setState(81); ((InvocationContext)_localctx).a = expression();
				 _localctx.ret.add(((InvocationContext)_localctx).a.ret); 
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==2) {
					{
					{
					setState(83); match(2);
					setState(84); ((InvocationContext)_localctx).a = expression();
					 _localctx.ret.add(((InvocationContext)_localctx).a.ret); 
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(94); match(1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Compiler.Expression ret;
		public Token INT;
		public Token DOUBLE;
		public ArtmExpContext b;
		public Token ID;
		public ArtmExpContext artmExp() {
			return getRuleContext(ArtmExpContext.class,0);
		}
		public TerminalNode DOUBLE() { return getToken(grammarParser.DOUBLE, 0); }
		public TerminalNode INT() { return getToken(grammarParser.INT, 0); }
		public TerminalNode ID() { return getToken(grammarParser.ID, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expression);
		try {
			setState(105);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96); ((ExpressionContext)_localctx).INT = match(INT);
				 ((ExpressionContext)_localctx).ret =  new Compiler.IntExpression((((ExpressionContext)_localctx).INT!=null?((ExpressionContext)_localctx).INT.getText():null)); 
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98); ((ExpressionContext)_localctx).DOUBLE = match(DOUBLE);
				 ((ExpressionContext)_localctx).ret =  new Compiler.DoubleExpression((((ExpressionContext)_localctx).DOUBLE!=null?((ExpressionContext)_localctx).DOUBLE.getText():null)); 
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(100); ((ExpressionContext)_localctx).b = artmExp();
				 ((ExpressionContext)_localctx).ret =  ((ExpressionContext)_localctx).b.val; 
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(103); ((ExpressionContext)_localctx).ID = match(ID);
				 ((ExpressionContext)_localctx).ret =  new Compiler.RefExpression((((ExpressionContext)_localctx).ID!=null?((ExpressionContext)_localctx).ID.getText():null)); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArtmExpContext extends ParserRuleContext {
		public Compiler.ArExpressionAll val;
		public MulExpContext a;
		public Add_operatorContext m;
		public MulExpContext b;
		public List<MulExpContext> mulExp() {
			return getRuleContexts(MulExpContext.class);
		}
		public List<Add_operatorContext> add_operator() {
			return getRuleContexts(Add_operatorContext.class);
		}
		public Add_operatorContext add_operator(int i) {
			return getRuleContext(Add_operatorContext.class,i);
		}
		public MulExpContext mulExp(int i) {
			return getRuleContext(MulExpContext.class,i);
		}
		public ArtmExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_artmExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterArtmExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitArtmExp(this);
		}
	}

	public final ArtmExpContext artmExp() throws RecognitionException {
		ArtmExpContext _localctx = new ArtmExpContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_artmExp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); ((ArtmExpContext)_localctx).a = mulExp();
			 ((ArtmExpContext)_localctx).val =  new Compiler.ArExpressionAll(((ArtmExpContext)_localctx).a.val); 
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==3 || _la==5) {
				{
				{
				setState(109); ((ArtmExpContext)_localctx).m = add_operator();
				setState(110); ((ArtmExpContext)_localctx).b = mulExp();
				 _localctx.val.add(((ArtmExpContext)_localctx).b.val, ((ArtmExpContext)_localctx).m.ret); 
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MulExpContext extends ParserRuleContext {
		public Compiler.ArExpression val;
		public ExpOpContext a;
		public Mull_operatorContext m;
		public ExpOpContext b;
		public List<Mull_operatorContext> mull_operator() {
			return getRuleContexts(Mull_operatorContext.class);
		}
		public ExpOpContext expOp(int i) {
			return getRuleContext(ExpOpContext.class,i);
		}
		public Mull_operatorContext mull_operator(int i) {
			return getRuleContext(Mull_operatorContext.class,i);
		}
		public List<ExpOpContext> expOp() {
			return getRuleContexts(ExpOpContext.class);
		}
		public MulExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mulExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterMulExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitMulExp(this);
		}
	}

	public final MulExpContext mulExp() throws RecognitionException {
		MulExpContext _localctx = new MulExpContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_mulExp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); ((MulExpContext)_localctx).a = expOp();
			 ((MulExpContext)_localctx).val =  new Compiler.ArExpression(((MulExpContext)_localctx).a.val); 
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4 || _la==13) {
				{
				{
				setState(120); ((MulExpContext)_localctx).m = mull_operator();
				setState(121); ((MulExpContext)_localctx).b = expOp();
				 _localctx.val.add(((MulExpContext)_localctx).b.val, ((MulExpContext)_localctx).m.ret); 
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpOpContext extends ParserRuleContext {
		public Compiler.Expression val;
		public Token a;
		public Token c;
		public Token b;
		public TerminalNode DOUBLE() { return getToken(grammarParser.DOUBLE, 0); }
		public TerminalNode INT() { return getToken(grammarParser.INT, 0); }
		public TerminalNode ID() { return getToken(grammarParser.ID, 0); }
		public ExpOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterExpOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitExpOp(this);
		}
	}

	public final ExpOpContext expOp() throws RecognitionException {
		ExpOpContext _localctx = new ExpOpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expOp);
		try {
			setState(135);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(129); ((ExpOpContext)_localctx).a = match(INT);
				 ((ExpOpContext)_localctx).val =  new Compiler.IntExpression((((ExpOpContext)_localctx).a!=null?((ExpOpContext)_localctx).a.getText():null)); 
				}
				break;
			case DOUBLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(131); ((ExpOpContext)_localctx).c = match(DOUBLE);
				 ((ExpOpContext)_localctx).val =  new Compiler.DoubleExpression((((ExpOpContext)_localctx).c!=null?((ExpOpContext)_localctx).c.getText():null)); 
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(133); ((ExpOpContext)_localctx).b = match(ID);
				 ((ExpOpContext)_localctx).val =  new Compiler.RefExpression((((ExpOpContext)_localctx).b!=null?((ExpOpContext)_localctx).b.getText():null)); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_decContext extends ParserRuleContext {
		public Compiler.VariableDeclaration val;
		public TypeContext type;
		public Token ID;
		public TerminalNode ID() { return getToken(grammarParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Var_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterVar_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitVar_dec(this);
		}
	}

	public final Var_decContext var_dec() throws RecognitionException {
		Var_decContext _localctx = new Var_decContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_var_dec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); ((Var_decContext)_localctx).type = type();
			setState(138); ((Var_decContext)_localctx).ID = match(ID);
			 ((Var_decContext)_localctx).val =  new Compiler.VariableDeclaration((((Var_decContext)_localctx).ID!=null?((Var_decContext)_localctx).ID.getText():null), ((Var_decContext)_localctx).type.ret.getName()); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Compiler.Type ret;
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_type);
		try {
			setState(145);
			switch (_input.LA(1)) {
			case 11:
				enterOuterAlt(_localctx, 1);
				{
				setState(141); match(11);
				 ((TypeContext)_localctx).ret =  new Compiler.Type("double"); 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 2);
				{
				setState(143); match(7);
				 ((TypeContext)_localctx).ret =  new Compiler.Type("int"); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Mull_operatorContext extends ParserRuleContext {
		public String ret;
		public Mull_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mull_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterMull_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitMull_operator(this);
		}
	}

	public final Mull_operatorContext mull_operator() throws RecognitionException {
		Mull_operatorContext _localctx = new Mull_operatorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mull_operator);
		try {
			setState(151);
			switch (_input.LA(1)) {
			case 4:
				enterOuterAlt(_localctx, 1);
				{
				setState(147); match(4);
				 ((Mull_operatorContext)_localctx).ret =  "*"; 
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 2);
				{
				setState(149); match(13);
				 ((Mull_operatorContext)_localctx).ret =  "/"; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Add_operatorContext extends ParserRuleContext {
		public String ret;
		public Add_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).enterAdd_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grammarListener) ((grammarListener)listener).exitAdd_operator(this);
		}
	}

	public final Add_operatorContext add_operator() throws RecognitionException {
		Add_operatorContext _localctx = new Add_operatorContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_add_operator);
		try {
			setState(157);
			switch (_input.LA(1)) {
			case 3:
				enterOuterAlt(_localctx, 1);
				{
				setState(153); match(3);
				 ((Add_operatorContext)_localctx).ret =  "+"; 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 2);
				{
				setState(155); match(5);
				 ((Add_operatorContext)_localctx).ret =  "-"; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
	}
}